# ark-exp-curve

./: .pre-commit-config.yml  README.md  pyproject.toml
src/v1/: main.py
src/v1/utils/: curves.py
