[tool.poetry]
name = "ark-exp-curve"
version = "0.1.0"
description = "App for calculating ARK Exp Curves"
authors = ["Wes Hahn <52631646+wesh92@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ark_exp_curve"}]

[tool.poetry.dependencies]
python = "3.10.6"
streamlit = "^1.22.0"
polars = "^0.17.12"
matplotlib = "^3.7.1"
altair = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 124
target-version = ['py310']

[tool.ruff]
extend-select = ["ANN2",
    "ANN401",
    "C4",
    "SIM",
    "B",
    "BLE",
    "ERA",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "RSE",
    "RUF",
    "S",
    "T20",
    "TID",
    "YTT",
    "W",
    "UP",
    "C90",
    "PD"]
ignore = [
    "E402", # Module level import not at top of file (module-import-not-at-top-of-file)
    "B905", # zip() without an explicit strict= parameter (zip-without-explicit-strict)
    "N818", # Exception name {name} should be named with an Error suffix (error-suffix-on-exception-name)
    "S101", # Use of assert detected (assert)
    "SIM103", # Return the condition {condition} directly (needless-bool)
    "B008", # Do not perform function call {name} in argument defaults (function-call-in-default-argument)
    "PD003", # .isna is preferred to .isnull; functionality is equivalent (pandas-use-of-dot-is-null)
    "PD004", # .notna is preferred to .notnull; functionality is equivalent (pandas-use-of-dot-not-null)=
    "SIM116", # Use a dictionary instead of consecutive if statements
    ]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
show-fixes = true
target-version = "py310"
line-length = 124
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator"]

[tool.ruff.per-file-ignores]
"**/pages/*.py" = ["N999"]
